force-app/main/default/objects/Consolidation_Group__c/Consolidation_Group__c.object-meta.xml
<CustomObject>
    <label>Consolidation Group</label>
    <nameField>
        <label>Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidation Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>