force-app/main/default/objects/Consolidation_Group__c/fields/Consolidation_Notes__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Notes__c</fullName>
    <label>Consolidation Notes</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>