force-app/main/default/objects/Consolidation_Group__c/fields/Consolidation_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Order_Date__c</fullName>
    <label>Consolidation Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>