force-app/main/default/objects/Consolidation_Group__c/fields/Consolidation_Status__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Status__c</fullName>
    <label>Consolidation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Partially Resolved</fullName>
            </value>
            <value>
                <fullName>Resolved</fullName>
            </value>
            <value>
                <fullName>Severed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>