force-app/main/default/objects/Consolidation_Group__c/fields/Consolidation_Type__c.field-meta.xml
<CustomField>
    <fullName>Consolidation_Type__c</fullName>
    <label>Consolidation Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>JCCP</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>