force-app/main/default/objects/Consolidation_Group__c/fields/Lead_Case__c.field-meta.xml
<CustomField>
    <fullName>Lead_Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Lead Case</label>
    <referenceTo>Case__c</referenceTo>
    <relationshipLabel>Consolidation Groups</relationshipLabel>
    <relationshipName>Consolidation_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>